<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        android:background="@color/black"/>
    <TextView
        android:id="@+id/workingview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:hint="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview1"
        app:layout_constraintBottom_toTopOf="@id/resultview"
        android:textSize="50sp"/>
    <TextView
        android:id="@+id/resultview"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout1"
        android:textColor="@color/white"/>
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layout2"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/CE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/CE"
            android:textSize="25sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/C"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/C"
            android:textSize="25sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/BS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BS"
            android:textSize="25sp"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/divide"
            android:textSize="25sp"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:textColor="@color/black"/>

    </LinearLayout>

    <!-- LinearLayout 2 -->
    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layout3"
        android:textColor="@color/black">
        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/seven"
            android:textSize="25sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/eight"
            android:textSize="25sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textSize="25sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multi"
            android:textSize="25sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <!-- LinearLayout 3 -->
    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layout4"
        android:layout_margin="5dp"
        android:textColor="@color/black">

        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/four"
            android:textSize="25sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/five"
            android:textSize="25sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/six"
            android:textSize="25sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textSize="25sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <!-- LinearLayout 4 -->
    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layout5"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one"
            android:textSize="25sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/two"
            android:textSize="25sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/three"
            android:textSize="25sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textSize="25sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <!-- LinearLayout 5 -->
    <LinearLayout
        android:id="@+id/layout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/sign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign"
            android:textSize="25sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="25sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/comma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/comma"
            android:textSize="25sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/equal"
            android:textSize="25sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:textColor="@color/black"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
